# codenames

./: Cargo.toml  Makefile  README.md
src/: main.rs
tmp/: code_names.html
