[package]
name = "codenames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = { version = "0.15" }
rand = { version = "0.8.5" }
